z-index fix on nav and htaccess fix for install page

--- a/resources/styles/style.css
+++ b/resources/styles/style.css
@@ -38,6 +38,7 @@ h2.title.update {
 #admin #header #nav ul {
 	padding: 0;
 	margin: 0;
+	z-index: 999;
 }
 #admin #header #nav ul li {
 	float: left;
